Add html to index file for basic structure

--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
-        
+        <div class="game-container">
+            <div class="button-container">
+                <div class="pattern-button" id="btn1"></div>
+                <div class="pattern-button" id="btn2"></div>
+                <div class="pattern-button" id="btn3"></div>
+                <div class="pattern-button" id="btn4"></div>
+            </div>
+            <div class="controls">
+                <button id="start-game">Start Game</button>
+                <div id="message">Press Start to begin!</div>
+                <div id="score">Score: 0</div>
+            </div>
+        </div>       
     </body>
     <script src="" async defer></script>
 </html>
