--- a/game.html
+++ b/game.html
@@ -6,15 +6,12 @@
         <title>Memory Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="/styles.css"> -->
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">Difficulty</a></li>
-                <li><a href="">Choose Game</a></li>
-                <li><a href="">Choose Game</a></li>
                 <li><a href="">Choose Game</a></li>
             </ul>
         </nav>
