Update Nav with other pages (To Be Added Later)

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Difficulty</a></li>
-                <li><a href="">Choose Game</a></li>
-                <li><a href="">Choose Game</a></li>
-                <li><a href="">Choose Game</a></li>
+                <li><a href="">How To Play</a></li>
+                <li><a href="">Leaderboard</a></li>
+                <li><a href="">Settings</a></li>
             </ul>
         </nav>
         <div class="game-container">
