Set up page structure

--- a/index.html
+++ b/index.html
@@ -9,29 +9,60 @@
         <!-- <link rel="stylesheet" href="/styles.css"> -->
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Difficulty</a></li>
-                <li><a href="">How To Play</a></li>
-                <li><a href="">Leaderboard</a></li>
-                <li><a href="">Settings</a></li>
-            </ul>
-        </nav>
-        <div class="game-container">
-            <div class="button-container">
-                <div class="pattern-button" id="btn1"></div>
-                <div class="pattern-button" id="btn2"></div>
-                <div class="pattern-button" id="btn3"></div>
-                <div class="pattern-button" id="btn4"></div>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Difficulty</a></li>
+                    <li><a href="">How To Play</a></li>
+                    <li><a href="">Leaderboard</a></li>
+                    <li><a href="">Settings</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <section>
+            <h1>Game Title</h1>
+            <a href="">Quick Play</a>
+            <a href="">Choose Difficulty</a>
+        </section>
+
+        <section>
+            <div>
+                <h1>How To Play</h1>
+                <div>
+                    <p>
+
+                    </p>
+                </div>
+                <div>
+                    <p>
+
+                    </p>
+                </div>
+            <a href="">Settings</a>
             </div>
-            <div class="controls">
-                <button id="start-game">Start Game</button>
-                <button id="start-game">End Game</button>
-                <div id="message">Press Start to begin!</div>
-                <div id="score">Score: 0</div>
+        </section>
+
+        <section>
+            <h1>Game Difficulty</h1>
+            <p></p>
+            <div class="difficulty-card-container">
+                <div class="difficulty-cards">
+                    <a href="">Easy</a>
+                </div>
+                <div class="difficulty-cards">
+                    <a href="">Medium</a>
+                </div>
+                <div class="difficulty-cards">
+                    <a href="">Hard</a>
+                </div>
             </div>
-        </div>       
+        </section>
+        
+        <footer>
+
+        </footer>
     </body>
     <script src="script.js"></script>
 </html>
