Add content for sections

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
         <section>
             <h1>Game Title</h1>
+            <p>
+                The worlds most challenging memory game, let’s see if you have what it takes to remember...
+            </p>
             <a href="">Quick Play</a>
             <a href="">Choose Difficulty</a>
         </section>
@@ -32,12 +35,14 @@
                 <h1>How To Play</h1>
                 <div>
                     <p>
-
+                        Your goal is to memorize and repeat the sequence of colours shown on the grid. 
+                        Each round, the game will light up a sequence of colours, and your task is to click the same colours in the correct order. 
                     </p>
                 </div>
                 <div>
                     <p>
-
+                        The sequence starts off short and simple, but as you progress, it will become longer and more challenging.
+                        If you click the wrong colour, the game ends, and your final score will be displayed. To win, you’ll need sharp focus and a great memory!
                     </p>
                 </div>
             <a href="">Settings</a>
@@ -46,7 +51,9 @@
 
         <section>
             <h1>Game Difficulty</h1>
-            <p></p>
+            <p>
+                Sharpen your memory and put your skills to the test. Choose from 3 levels of difficulty to get started:
+            </p>
             <div class="difficulty-card-container">
                 <div class="difficulty-cards">
                     <a href="">Easy</a>
@@ -61,7 +68,7 @@
         </section>
         
         <footer>
-
+            
         </footer>
     </body>
     <script src="script.js"></script>
