--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Memory Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="/styles.css"> -->
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
         <header>
@@ -68,7 +68,7 @@
         </section>
         
         <footer>
-            
+
         </footer>
     </body>
     <script src="script.js"></script>
