--- a/index.html
+++ b/index.html
@@ -7,6 +7,88 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/styles.css">
+        <style>
+
+            /* Style for the header section */
+            header {
+                background-color: black; /* Sets the background color of the header bar to black */
+                padding: 10px 20px; /* Adds space inside the header for better spacing */
+            }
+
+            /* Style for the nav element inside the header */
+            header nav {
+                text-align: right; /* Aligns the content (navigation links) to the right */
+            }
+
+            /* Remove default list styles for the navigation links */
+            header nav ul {
+                list-style: none; /* Removes bullet points from the list */
+                margin: 0; /* Removes default margin to keep the list flush with the nav */
+                padding: 0; /* Removes default padding from the list */
+                display: flex; /* Displays list items in a row, making the nav horizontal */
+                justify-content: flex-end; /* Pushes the list items to the right side of the nav */
+            }
+
+            /* Style for each list item inside the nav */
+            header nav ul li {
+                margin-left: 20px; /* Adds space between each link */
+            }
+
+            /* Style for the anchor tags within each list item */
+            header nav ul li a {
+                color: white; /* Sets the text color to white for contrast against the black header */
+                text-decoration: none; /* Removes the underline from the links */
+                font-weight: bold; /* Makes the links bold for better readability */
+                font-family: Arial, sans-serif; /* Sets a clean, sans-serif font */
+            }
+
+            /* Optional: Hover effect for navigation links */
+            header nav ul li a:hover {
+                text-decoration: underline; /* Adds underline when hovering to indicate interactivity */
+            }
+
+            /* Center content inside each section */
+            section {
+                text-align: center; /* Centers text and inline elements horizontally within the section */
+                max-width: 800px; /* Optional: Limits the section width to make content easier to read */
+                margin: 0 auto; /* Centers the section container itself within the page */
+                padding: 20px; /* Adds padding around the section content for spacing */
+                border: 10px solid;
+                border-radius: 10px;
+            }
+
+            /* Additional styling for buttons/links inside the section */
+            section a {
+                display: inline-block; /* Allows padding and margins to be applied like a button */
+                margin: 10px; /* Adds space between each link or button */
+                padding: 10px 20px; /* Adds space inside the link for a button-like appearance */
+                background-color: #007bff; /* Sets a background color for contrast */
+                color: white; /* Sets the text color to white for readability */
+                text-decoration: none; /* Removes underline from links */
+                border-radius: 5px; /* Rounds the corners of the button */
+                font-family: Arial, sans-serif; /* Sets a clean font */
+            }
+
+            /* Optional: Center-align content in the difficulty card container */
+            .difficulty-card-container {
+                display: flex; /* Makes the cards layout flexible */
+                justify-content: center; /* Centers the cards horizontally */
+                gap: 20px; /* Adds space between each card */
+                flex-wrap: wrap; /* Allows wrapping for smaller screens */
+                padding-top: 20px; /* Adds space at the top of the container */
+            }
+
+            .difficulty-cards {
+                background-color: #f0f0f0; /* Light background for each card */
+                padding: 20px; /* Adds space inside each card */
+                border-radius: 5px; /* Rounds the corners of each card */
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Adds shadow for depth */
+                width: 150px; /* Sets a fixed width for each card */
+                text-align: center; /* Centers content inside each card */
+            }
+
+
+        </style>
     </head>
     <body>
         <header>
