Add padding and margin and other styling to content

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             section {
                 text-align: center; /* Centers text and inline elements horizontally within the section */
                 max-width: 800px; /* Optional: Limits the section width to make content easier to read */
-                margin: 0 auto; /* Centers the section container itself within the page */
+                margin: 200px auto; /* Centers the section container itself within the page */
                 padding: 20px; /* Adds padding around the section content for spacing */
-                border: 10px solid;
-                border-radius: 10px;
+                border: 5px solid; /* Adds a border to each section */
+                border-radius: 10px; /* Rounds the corners of each section */
             }
 
             /* Additional styling for buttons/links inside the section */
@@ -67,6 +67,15 @@
                 text-decoration: none; /* Removes underline from links */
                 border-radius: 5px; /* Rounds the corners of the button */
                 font-family: Arial, sans-serif; /* Sets a clean font */
+            }
+
+            h1 {
+                margin: 20px;
+            }
+
+            p {
+                margin: 20px;
+                padding: 0 50px 0 50px;
             }
 
             /* Optional: Center-align content in the difficulty card container */
