Updated font from google fonts

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/styles.css">
-        <style>
 
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+            
             /* Style for the header section */
             header {
                 background-color: black; /* Sets the background color of the header bar to black */
@@ -41,7 +43,6 @@
                 color: white; /* Sets the text color to white for contrast against the black header */
                 text-decoration: none; /* Removes the underline from the links */
                 font-weight: bold; /* Makes the links bold for better readability */
-                font-family: Arial, sans-serif; /* Sets a clean, sans-serif font */
             }
 
             /* Optional: Hover effect for navigation links */
@@ -67,16 +68,17 @@
                 color: white; /* Sets the text color to white for readability */
                 text-decoration: none; /* Removes underline from links */
                 border-radius: 5px; /* Rounds the corners of the button */
-                font-family: Arial, sans-serif; /* Sets a clean font */
             }
 
             h1 {
                 margin: 20px; /* Adds space between */
+                font-size: 3rem;
             }
 
             p {
                 margin: 20px auto; /* Adds space between */
                 padding: 0 500px 0 500px; /* Adds space between */
+                font-size: 1.5rem;
             }
 
             /* Optional: Center-align content in the difficulty card container */
@@ -90,11 +92,12 @@
 
             .difficulty-cards {
                 background-color: #f0f0f0; /* Light background for each card */
-                margin-bottom: 20px;
+                margin: 0 20px 20px 20px;
                 padding: 20px; /* Adds space inside each card */
                 border-radius: 5px; /* Rounds the corners of each card */
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Adds shadow for depth */
-                width: 150px; /* Sets a fixed width for each card */
+                width: 350px; /* Sets a fixed width for each card */
+                height: 250px;
                 text-align: center; /* Centers content inside each card */
             }
 
