Updated a tags to snap to page sections

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </nav>
         </header>
 
-        <section class="content-wrapper">
+        <section class="content-wrapper" id="title-section">
             <div class="container-wrapper">
                 <h1>Game Title</h1>
             <p>
