Update NAV and increase button size - add leaderboard button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             /* Style for each list item inside the nav */
             header nav ul li {
-                margin-left: 20px; /* Adds space between each link */
+                margin-left: 40px; /* Adds space between each link */
             }
 
             /* Style for the anchor tags within each list item */
@@ -68,11 +68,12 @@
             section a {
                 display: inline-block; /* Allows padding and margins to be applied like a button */
                 margin: 10px; /* Adds space between each link or button */
-                padding: 10px 20px; /* Adds space inside the link for a button-like appearance */
+                padding: 10px 40px; /* Adds space inside the link for a button-like appearance */
                 background-color: #007bff; /* Sets a background color for contrast */
                 color: white; /* Sets the text color to white for readability */
                 text-decoration: none; /* Removes underline from links */
-                border-radius: 5px; /* Rounds the corners of the button */
+                border-radius: 10px; /* Rounds the corners of the button */
+                font-size: 1.5rem;
             }
 
             h1 {
@@ -146,6 +147,7 @@
             </p>
             <a href="">Quick Play</a>
             <a href="">Choose Difficulty</a>
+            <a href="">Leaderboards</a>
             </div>
         </section>
 
@@ -185,6 +187,7 @@
                     <a href="">Hard</a>
                 </div>
             </div>
+            <p>Challenge yourself further and adjust the speed of the game in the settings.</p>
             </div>
         </section>
         
