Swapped order of the nav items

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="#difficulty-section">Difficulty</a></li>
                     <li><a href="#instructions-section">How To Play</a></li>
+                    <li><a href="#difficulty-section">Difficulty</a></li>
                     <li><a href="">Leaderboard</a></li>
                     <li><a href="">Settings</a></li>
                 </ul>
@@ -147,8 +147,8 @@
             <p>
                 The worlds most challenging memory game, let’s see if you have what it takes to remember...
             </p>
-            <a href="">Quick Play</a>
-            <a href="">Choose Difficulty</a>
+            <a href="game.html">Quick Play</a>
+            <a href="#difficulty-section">Choose Difficulty</a>
             <a href="">Leaderboards</a>
             </div>
         </section>
