--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
             
             /* Style for the header section */
             header {
-                background-color: black; /* Sets the background color of the header bar to black */
+                background: url(./pexels-felixmittermeier-957061.jpg);
                 padding: 10px 20px; /* Adds space inside the header for better spacing */
                 box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.668);
                 position: fixed;
                 top: 0;
                 width: 100%; /* Makes sure the header spans the full width of the viewport */
                 z-index: 1000; /* Ensures the header stays on top of other elements */
+            }
+
+            .website-logo {
+                position: absolute;
+                left: 30px;
             }
 
             /* Style for the nav element inside the header */
@@ -39,6 +44,7 @@
             /* Style for each list item inside the nav */
             header nav ul li {
                 margin-left: 40px; /* Adds space between each link */
+                font-size: 1.5rem;
             }
 
             /* Style for the anchor tags within each list item */
@@ -74,14 +80,15 @@
             }
 
             .container-wrapper {
-                background-color: #6352CF;
+                background: url(./pexels-felixmittermeier-957061.jpg);
                 margin: 150px auto;
                 box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;                border-radius: 20px;
                 max-width: 70%;
+                padding: 10px;
             }
 
             /* Additional styling for buttons/links inside the section */
-            .content-wrapper a {
+            .content-wrapper .cta-button {
                 display: inline-block; /* Allows padding and margins to be applied like a button */
                 margin: 10px 10px 20px 10px; /* Adds space between each link or button */
                 padding: 10px 40px; /* Adds space inside the link for a button-like appearance */
@@ -104,6 +111,10 @@
                 font-size: 1.5rem;
             }
 
+            .in-text-link {
+                text-decoration: underline;
+            }
+
             /* Optional: Center-align content in the difficulty card container */
             .difficulty-card-container {
                 display: flex; /* Makes the cards layout flexible */
@@ -114,7 +125,7 @@
             }
 
             .difficulty-cards {
-                background-color: #f0f0f0; /* Light background for each card */
+                background-color: #000000; /* Light background for each card */
                 margin: 0 20px 20px 20px;
                 padding: 20px; /* Adds space inside each card */
                 border-radius: 5px; /* Rounds the corners of each card */
@@ -123,7 +134,7 @@
             }
 
             footer {
-                background-color: black; /* Sets the background color of the header bar to black */
+                background: url(./pexels-felixmittermeier-957061.jpg);
                 box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.668);
                 padding: 20px;
                 color: rgb(0, 0, 0);
@@ -143,9 +154,10 @@
     </head>
     <body>
         <div>
-            <img class="background-image" src="./5073414.jpg" alt="background image">
+            <img class="background-image" src="./pexels-mart-production-8885140.jpg" alt="background image">
         </div>
         <header>
+            <a class="website-logo" href="index.html"><img src="./human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
@@ -159,13 +171,13 @@
 
         <section class="content-wrapper" id="title-section">
             <div class="container-wrapper">
-                <h1>Game Title</h1>
+                <h1>Do You Remember?</h1>
             <p>
                 The worlds most challenging memory game, let’s see if you have what it takes to remember...
             </p>
-            <a href="game.html">Quick Play</a>
-            <a href="#difficulty-section">Choose Difficulty</a>
-            <a href="">Leaderboards</a>
+            <a class="cta-button" href="game.html">Quick Play</a>
+            <a class="cta-button" href="#difficulty-section">Choose Difficulty</a>
+            <a class="cta-button" href="">How To Play</a>
             </div>
         </section>
 
@@ -184,7 +196,7 @@
                         If you click the wrong colour, the game ends, and your final score will be displayed. To win, you’ll need sharp focus and a great memory!
                     </p>
                 </div>
-            <a href="">Settings</a>
+            <a class="cta-button" href="">Leaderboards</a>
             </div>
         </section>
 
@@ -196,16 +208,16 @@
             </p>
             <div class="difficulty-card-container">
                 <div class="difficulty-cards">
-                    <a href="">Easy</a>
+                    <a class="cta-button" href="">Easy</a>
                 </div>
                 <div class="difficulty-cards">
-                    <a href="">Medium</a>
+                    <a class="cta-button" href="">Medium</a>
                 </div>
                 <div class="difficulty-cards">
-                    <a href="">Hard</a>
+                    <a class="cta-button" href="">Hard</a>
                 </div>
             </div>
-            <p id="challenge-text">Challenge yourself further and adjust the speed of the game in the settings.</p>
+            <p id="challenge-text">Challenge yourself further and adjust the speed of the game in the <a class="in-text-link" href="/settings.html">settings</a>.</p>
             </div>
         </section>
         
