Added social media icons as svg files adjusted styling

--- a/index.html
+++ b/index.html
@@ -138,8 +138,13 @@
                 bottom: 0;
             }
 
+            .social-icons img {
+                width: 50px;
+                height: 50px;
+            }
+
             footer .social-icons a {
-                margin: 0 10px;
+                margin: 0 30px;
             }
 
 
@@ -220,12 +225,12 @@
         
         <footer>
             <div class="social-icons">
-                <a href="https://www.facebook.com" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.png" alt="Facebook"></a>
-                <a href="https://www.twitter.com" target="_blank" rel="noopener"><img src="./Resources/Icons/twitter-alt.png" alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.png" alt="Instagram"></a>
-                <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./Resources/Icons/youtube.png" alt="YouTube"></a>
-                <a href="https://www.snapchat.com" target="_blank" rel="noopener"><img src="./Resources/Icons/snapchat.png" alt="Snapchat"></a>
-                <a href="https://www.tiktok.com" target="_blank" rel="noopener"><img src="./Resources/Icons/tik-tok.png" alt="Tik Tok"></a>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook"></a>
+                <a href="https://www.twitter.com" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./Resources/Icons/youtube.svg" alt="YouTube"></a>
+                <a href="https://www.snapchat.com" target="_blank" rel="noopener"><img src="./Resources/Icons/snapchat.svg" alt="Snapchat"></a>
+                <a href="https://www.tiktok.com" target="_blank" rel="noopener"><img src="./Resources/Icons/tik-tok.svg" alt="Tik Tok"></a>
             </div>
         </footer>
     </body>
