remove un-used folder update cta buttons links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             body {
                 background: rgb(2,0,36);
-                background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(52,9,121,1) 90%, rgba(52,9,121,1) 100%);
+                background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(74,0,127,1) 90%, rgba(52,9,121,1) 100%);
             }
 
             /* Style for the nav element inside the header */
@@ -54,7 +54,7 @@
 
             /* Style for the anchor tags within each list item */
             header nav ul li a {
-                color: white; /* Sets the text color to white for contrast against the black header */
+                color: hsl(0, 0%, 85%); /* Sets the text color to white for contrast against the black header */
                 text-decoration: none; /* Removes the underline from the links */
                 font-weight: bold; /* Makes the links bold for better readability */
             }
@@ -85,8 +85,8 @@
                 display: inline-block; /* Allows padding and margins to be applied like a button */
                 margin: 10px 10px 20px 10px; /* Adds space between each link or button */
                 padding: 10px 40px; /* Adds space inside the link for a button-like appearance */
-                background-color: #4A007F; /* Sets a background color for contrast */
-                color: white; /* Sets the text color to white for readability */
+                background-color: rgb(74, 0, 127); /* Sets a background color for contrast */
+                color: hsl(0, 0%, 85%); /* Sets the text color to white for readability */
                 text-decoration: none; /* Removes underline from links */
                 border-radius: 10px; /* Rounds the corners of the button */
                 font-size: 1.5rem;
@@ -177,7 +177,7 @@
                 <div>
                     <a class="cta-button" href="game.html">Quick Play</a>
                     <a class="cta-button" href="#difficulty-section">Choose Difficulty</a>
-                    <a class="cta-button" href="">How To Play</a>
+                    <a class="cta-button" href="#instructions-section">How To Play</a>
                 </div>
                 
             </div>
